fix spacing about

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -57,7 +57,7 @@ body {
   width: 70%;
   z-index: 100;
   padding: 20px;
-  margin-left: -9.5%;
+  margin-left: -140px;
   margin-top: -0.6%;
   display: flex;
   flex-direction: column;
@@ -132,7 +132,6 @@ body {
   .content {
     width: 100%;
     margin: 0 auto;
-    /* margin-left: -9.5%; */
     margin-top: -9.6%;
     flex-direction: row;
     flex-wrap: wrap;
